examples/test/testpolicy2575.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2575
  namespace: namespace420
spec:
  podSelector:
    matchLabels:
      key2: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value25
          key44: value8
          key48: value22
      podSelector:
        matchLabels:
          key30: value27
          key4: value36
